# arccos-api

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  arccos.py  pyproject.toml
.github/workflows/: release.yml
arccos/: __init__.py  __main__.py  _http.py  auth.py  cli.py  client.py  exceptions.py
arccos/resources/: __init__.py  clubs.py  courses.py  handicap.py  rounds.py  stats.py
docs/: openapi.yaml
examples/: basic_usage.py  pace_of_play.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_exceptions.py  test_http.py  test_resources.py  test_rounds.py  test_security.py
