[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "arccos"
version = "0.1.0"
description = "Unofficial Python CLI and client library for the Arccos Golf API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-requests",
]

[project.scripts]
arccos = "arccos.cli:main"

[project.urls]
Homepage   = "https://github.com/pfrederiksen/arccos-api"
Repository = "https://github.com/pfrederiksen/arccos-api"
Issues     = "https://github.com/pfrederiksen/arccos-api/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
